Mon Feb 21 22:13:13 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/DynamicInterface/Unknown_User_Exception.h (_downcast):
	* tao/DynamicInterface/Unknown_User_Exception.cpp (_downcast):

	  Added missing const _downcast() static method.  Required by the
	  C++ mapping.

	  Removed unnecessary/redundant repository ID check.  The
	  standard C++ dynamic_cast<> already performs the required
	  downcasting checks.

Mon Feb 21 13:09:43 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Exception.h:
	* tao/SystemException.h:

	  Made all constructors protected, as required by the C++
	  mapping.

	  Added missing const _downcast() static method declaration.
	  Required by the C++ mapping.

	* tao/Exception.i:

	  Added missing const _downcast() static method definition.
	  Required by the C++ mapping.

	* tao/SystemException.cpp (_downcast):
	* tao/SystemException.inl (_downcast):

	  Removed repository ID check.  It is redundant since the
	  dynamic_cast<> in this implementation already does its own
	  checking.  Since we're downcasting to a pointer to a
	  SystemException instead of a reference, we do not have to worry
	  about dynamic_cast<> throwing an exception.  Reduces footprint.

	  Inlined all _downcast() implementations.  Reduces footprint
	  since they are all now dynamic_cast<> one-liners.  This change
	  in combination with the above change reduces the size of
	  SystemException object file by about 6K.

Mon Feb 21 19:40:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/ServantRetentionStrategyFactoryImpl.cpp:
          Simplified this strategy to reduce footprint

Mon Feb 21 13:14:04 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/driver/drv_preproc.cpp:
        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/util/utl_global.cpp:
        * TAO_IDL/util/utl_identifier.cpp:

          Fixed bugs with
