@@ -1,3 +1,12 @@
+Mon Feb 21 22:31:25 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* tao/UserException.cpp (_downcast):
+	* tao/UserException.inl (_downcast):
+
+	  Removed unnecessary/redundant repository ID check and inlined
+	  these methods.  The standard C++ dynamic_cast<> already performs
+	  the required downcasting checks.  Reduces footprint.
+
 Mon Feb 21 22:13:13 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* tao/DynamicInterface/Unknown_User_Exception.h (_downcast):
@@ -8,7 +17,7 @@ Mon Feb 21 22:13:13 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	  Removed unnecessary/redundant repository ID check.  The
 	  standard C++ dynamic_cast<> already performs the required
-	  downcasting checks.
+	  downcasting checks.  Reduces footprint.
 
 Mon Feb 21 13:09:43 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
